@@ -377,8 +377,7 @@ ImVec2 GetScreenSize();
 ImVec2 ScreenToCanvas(const ImVec2& pos);
 ImVec2 CanvasToScreen(const ImVec2& pos);
 
-
-
+int GetNodeCount();                                // Returns number of submitted nodes since Begin() call
 
 
 
