@@ -99,6 +99,10 @@ v0.9.1 (WIP):
 
             void Flow(LinkId linkId, FlowDirection direction = FlowDirection::Forward);
 
+    NEW: Editor can now return number of submitted nodes (#81)
+        New API:
+            int GetNodeCount();                                // Returns number of submitted nodes since Begin() call
+
     NEW: Editor now allow to set Z position for nodes (#109)
 
         Nodes with higher Z position are drawn on top of ones with lower.
